--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,62 @@
 ---
 layout: default
 ---
+
 <article>
   <header>
     {%- assign date_format = site.date_format | default: "%B %d, %Y" -%}
     <h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1>
-    <p><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: date_format }}</time></p>
+    <p>
+      <time datetime="{{ page.date | date_to_xmlschema }}"
+        >{{ page.date | date: date_format }}</time
+      >
+    </p>
   </header>
-{{ content }}
-  {% if site.comments.isso %}
-  <hr><div id="isso-thread"></div>
-  {% endif %}
-  {% if site.comments.disqus %}
-  <hr><div id="disqus_thread"></div>
-  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  {{ content }} {% if site.comments.isso %}
+  <hr />
+  <div id="isso-thread"></div>
+  {% endif %} {% if site.comments.disqus %}
+  <hr />
+  <div id="disqus_thread"></div>
+  <a href="http://disqus.com" class="dsq-brlink"
+    >comments powered by <span class="logo-disqus">Disqus</span></a
+  >
   {% endif %}
 </article>
 
 {% if site.show_footer and page.previous.url or page.next.url %}
 <footer>
-  {% if page.next.url %}<a class="gray" href="{{ page.next.url | relative_url }}">« {{ page.next.title }}</a>{% else %}<span></span>{% endif %}
-  {% if page.previous.url %}<a class="gray" href="{{ page.previous.url | relative_url }}">{{ page.previous.title }} »</a>{% else %}<span></span>{% endif %}
+  {% if page.next.url %}<a class="gray" href="{{ page.next.url | relative_url }}"
+    >« {{ page.next.title }}</a
+  >{% else %}<span></span>{% endif %} {% if page.previous.url %}<a
+    class="gray"
+    href="{{ page.previous.url | relative_url }}"
+    >{{ page.previous.title }} »</a
+  >{% else %}<span></span>{% endif %}
 </footer>
+{% endif %} {% if page.comments %}
+<div id="disqus_thread"></div>
+<script>
+  /**
+   *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+   *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+  (function() {
+    // DON'T EDIT BELOW THIS LINE
+    var d = document,
+      s = d.createElement('script');
+    s.src = 'https://EXAMPLE.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+<noscript
+  >Please enable JavaScript to view the
+  <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript
+>
 {% endif %}
