--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
 {% endif %}
 {% if site.comments.disqus %}<script src="//{{ site.comments.disqus }}.disqus.com/embed.js" async></script>{% endif %}
 {% if site.comments.isso %}<script data-isso="http://{{ site.comments.isso }}" src="//{{ site.comments.isso }}/js/embed.min.js"></script>{% endif %}
-
+<script>
+  import JsonViewer from './assets/libs/jsonviewer';
+</script>
 <header>
   <h2><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></h2>
   {% if site.navigation %}
