--- a/_layouts/tools.html
+++ b/_layouts/tools.html
@@ -27,7 +27,7 @@
       {% if path.first %}
         <a href="{{ path.first[1] }}">{{ path.first[0] }}</a>
       {% else %}
-        {% assign node = site.pages | where: "name", path | first %}<a href="{{ node.url | relative_url }}">{{ node.title }}</a>
+        {% assign node = site.pages | where: "name", path | first %}<a href="{{ node.url | relative_url }}">{{ node.titleDev }}</a>
       {% endif %}
     {% endfor %}
     </nav>
