--- a/_layouts/tools.html
+++ b/_layouts/tools.html
@@ -19,6 +19,16 @@
 {% if site.comments.disqus %}<script src="//{{ site.comments.disqus }}.disqus.com/embed.js" async></script>{% endif %}
 {% if site.comments.isso %}<script data-isso="http://{{ site.comments.isso }}" src="//{{ site.comments.isso }}/js/embed.min.js"></script>{% endif %}
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C9HVRXW0S3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C9HVRXW0S3');
+</script>
+
 <header>
   <h2><a href="{{ "/" | relative_url }}">{{ site.titleDev | escape }}</a></h2>
   {% if site.navigation %}
